webui/src/scss/_bank.scss
.bank {
	-webkit-touch-callout: none !important;
	-webkit-user-select: none !important;
	user-select: none !important;
	touch-action: none;

	padding: Min(5px, 10%);
	height: fit-content;
	display: inline-block;
	border: 1px solid transparent;

	&.clickable {
		cursor: pointer;
	}

	&.selected img {
		border: 2px solid #d50215 !important;
		// margin: -2px;
	}

	&.fixed img {
		width: 72px;
		height: 72px;
	}

	&.drophere {
		border: 1px dashed black;
		background-color: #eee;
	}

	&.drophover {
		border: 1px solid black;
		background-color: #daffab;
	}

	&.draggable img {
		-webkit-user-drag: inherit;
	}

	img {
		// Commented out to alow scaling in a uniform way, instead of streatching
		// max-width: 72px;
		// max-height: 72px;
		width: 100%;
		height: 100%;
		object-fit: contain;
		display: block;
		border-radius: Max(12%, 4px);
		border: 1px solid rgba(100, 100, 100, 0.4);
		margin: 0 auto;

		-webkit-user-drag: none;
	}
}

.button-page-input {
	font-size: 1.2em;
	// text-align: center;
	display: block;
	min-width: 150px;
}

.button-page-name {
	color: black;
	font-weight: normal;
	font-size: 1.2em;
}

